fixed the button color, spacing of the buttons and the title

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,17 +5,18 @@
   font-size: 20px;
 }
 
-.create-button-pink {
+.create-button-blue {
   align-items: center;
-  border:solid $pink 2px;
-  background-color: $pink;
+  border:solid $blue 2px;
+  background-color: $blue;
   color: white;
+  font-weight: bold;
   opacity: 1;
   padding: 10px 30px;
   border-radius: 4px;
   &:hover {
     text-decoration: none;
-    border: solid $pink 2px;
+    border: solid $blue 2px;
     color: white;
     opacity: 0.6;
   }
@@ -82,11 +83,11 @@
   justify-content: space-between;
   text-align: center;
   align-items: center;
-  height: 300px;
+  //height: 300px;
   margin-right: 100px;
   margin-left: 100px;
-  // margin-top:20px;
-  padding: 20px;
+  margin-top:20px;
+  //padding: 20px;
 
 }
 .icon {
@@ -95,7 +96,7 @@
 
 .title {
   text-align: center;
-  font-size: 80px;
+  font-size: 70px;
   font-style: bold;
   //text-decoration: underline;
 
